# course_work_pain

./: .coverage  pyproject.toml
course_work/: pyvenv.cfg
main_code/: main.py  utils.py
tests/: test_for_main.py  tests_for_main.py
