[tool.poetry]
name = "course-work"
version = "0.1.0"
description = ""
authors = ["Danil Dergachev <ddergachev2001@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
file = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
